# byteCLI

./: .gitignore  ByteCLI_Developer_PRD.md  CONTRIBUTING.md  LICENSE  README.md  byte_design_relive.pen  pyproject.toml
bytecli/: constants.py
bytecli/data/: bytecli.css  com.bytecli.Service.xml
bytecli/i18n/: __init__.py  en.json  manager.py  zh.json
bytecli/indicator/: history_panel.py  main.py  toast_manager.py  window.py
bytecli/service/: audio_manager.py  config_manager.py  dbus_service.py  history_manager.py  hotkey_manager.py  main.py  model_switcher.py  pid_manager.py  recording_fsm.py  state_machine.py  text_output.py  whisper_engine.py
bytecli/settings/: app.py  main.py  window.py
bytecli/settings/dialogs/: hotkey_conflict.py
bytecli/settings/sections/: audio_input.py  device_selection.py  hotkey_config.py  language_select.py  model_selection.py  server_status.py  startup_config.py
bytecli/settings/widgets/: radio_option.py  section_card.py  styled_button.py  toast_overlay.py
bytecli/shared/: __init__.py  css_provider.py  dbus_client.py  logging_setup.py
data/: com.bytecli.Service.xml
debian/: control  postinst  prerm
desktop/: bytecli-settings.desktop  bytecli.desktop
scripts/: build-deb.sh  install-deb.sh  install.sh  uninstall.sh
snap/: snapcraft.yaml
snap/local/: bytecli-launcher
systemd/: bytecli.service
tests/: test_stability.py
